# cosmic-viewer

./: .gitignore  Cargo.toml  README.md  justfile  known_bugs.md
cosmic-viewer/: Cargo.toml
cosmic-viewer/src/: app.rs  icon_cache.rs  key_binds.rs  localize.rs  main.rs  menu.rs  message.rs  watcher.rs
data/: com.system76.CosmicViewer.desktop  com.system76.CosmicViewer.metainfo.xml
debian/: changelog  control  copyright  rules
i18n/en/: cosmic_viewer.ftl
res/: com.system76.CosmicViewer.desktop
test_images/: test_format.tiff
viewer-canvas/: Cargo.toml
viewer-canvas/src/: lib.rs  program.rs  state.rs
viewer-canvas/src/program/: manager.rs
viewer-config/: Cargo.toml
viewer-config/src/: lib.rs
viewer-core/: Cargo.toml
viewer-core/src/: cache.rs  clipboard.rs  lib.rs  loader.rs  nav.rs
viewer-core/tests/: cache_integration.rs  image_pipeline.rs  nav_scan.rs
viewer-toolbar/: Cargo.toml
viewer-toolbar/src/: lib.rs  toolbar.rs  toolbar_item.rs
viewer-tools/: Cargo.toml
viewer-tools/benches/: shapes_bench.rs
viewer-tools/src/: annotate.rs  crop.rs  lib.rs  renderer.rs  rotate.rs
viewer-tools/src/annotate/: color.rs  tool.rs
viewer-tools/src/annotate/tool/: highlighter.rs  pen.rs  pencil.rs  shapes.rs  text.rs
viewer-tools/src/annotate/tool/highlighter/: operation.rs  preview.rs
viewer-tools/src/annotate/tool/pen/: operation.rs  preview.rs
viewer-tools/src/annotate/tool/pencil/: operation.rs  preview.rs
viewer-tools/src/annotate/tool/shapes/: operation.rs  preview.rs
viewer-tools/src/annotate/tool/text/: operation.rs  preview.rs
viewer-tools/src/crop/: handle.rs  operation.rs  ratio.rs  selection.rs
viewer-tools/tests/: annotation_pipeline.rs  shape_rotation.rs  visual_regression.rs
viewer-widgets/: Cargo.toml
viewer-widgets/src/: dashed_shape.rs  image_grid.rs  lib.rs
viewer-widgets/src/image_grid/: grid.rs  grid_core.rs
