[workspace]

resolver = "3"
members = ["cosmic-viewer", "viewer-canvas", "viewer-config", "viewer-core", "viewer-widgets", "viewer-toolbar", "viewer-tools"]

[workspace.package]
version = "1.0.0"
description = "Image viewer for the COSMIC Desktop"
edition = "2024"
authors = ["Bryan Hyland <bryan.hyland32@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/pop-os/cosmic-viewer"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[workspace.dependencies]
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { version = "0.25.9", features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "ico", "avif"] }
kamadak-exif = "0.6.1"
libheif-rs = { version = "2.7.0", default-features = false, features = ["embedded-libheif", "v1_17"] }
lru = "0.16.3"
rayon = "1.11.0"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "fs"] }
tracing = "0.1.44"
turbojpeg = "1.4.0"
zune-image = "0.5.0"


[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
  "autosize",
  "tokio",
  "winit",
  "wgpu",
  "a11y",
  "surface-message",
  "rfd",
  "wayland"
]
