[package]
version = "0.1.0"
name = "cosmic-viewer"
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
viewer-core = { path = "../viewer-core" }
viewer-config = { path = "../viewer-config" }
viewer-widgets = { path = "../viewer-widgets" }

i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
libcosmic.workspace = true
once_cell = "1.21.3"
rust-embed = "8.11.0"
tracing.workspace = true
open = "5.3.3"
chrono = "0.4.44"
