# cosmic-viewer — the application binary. Sits at the top of the dependency
# graph and composes the library crates (core, tools, canvas, toolbar, widgets,
# config) into the runnable COSMIC image viewer; owns app state and message flow.
[package]
# DEVIATION (deliberate): `version` is explicit, not `version.workspace = true`.
# The i18n-embed-fl `fl!` proc-macro parses this manifest at expansion time and
# mis-derives the fluent domain (it looks for `cosmic-viewer.ftl` instead of the
# real `i18n/en/cosmic_viewer.ftl`) when version inheritance is used, breaking
# every `fl!` call. Keep the version literal here until that is resolved upstream.
version = "0.1.0"
name = "cosmic-viewer"
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libcosmic.workspace = true
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
once_cell = "1.21.3"
rust-embed = "8.11.0"
open = "5.3.3"
chrono = "0.4.44"
image.workspace = true
dirs = "6.0.0"
notify = "8.2.0"
trash = "5.2.5"
wallpaper = "3.2"
smol_str = "0.3"

viewer-canvas = { path = "../viewer-canvas" }
viewer-core = { path = "../viewer-core" }
viewer-config = { path = "../viewer-config" }
viewer-widgets = { path = "../viewer-widgets" }
viewer-toolbar = { path = "../viewer-toolbar" }
viewer-tools = { path = "../viewer-tools" }

tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
