[package]
version.workspace = true
name = "viewer-widgets"
description.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
libcosmic.workspace = true
once_cell = "1.21.3"
rust-embed = "8.11.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
