# viewer-widgets - custom reusable widgets. Currently provides the dashed-border
# canvas shape used by the annotation tools. Presentation-only; independent of
# image IO and the app shell.
[package]
version.workspace = true
name = "viewer-widgets"
description.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libcosmic.workspace = true

[lints]
workspace = true
